--- a/client/src/components/CommentBox.css
+++ b/client/src/components/CommentBox.css
@@ -51,6 +51,14 @@
     background-color: #fff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   }
+
+.comment-content p {
+  color: black;
+}
+
+.comment-content small {
+  color: rgb(100, 100, 100);
+}
   
   .no-comments {
     font-style: italic;
